add styling to personal website

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <link rel= "stylesheet" href="styles.css"/>
     </head>
     
     <body>
@@ -10,4 +10,4 @@
         <p>Grandmaster god</p>
         <p>Will boost elo for money</p>
     </body>
-</html>
+</html> 
